--- a/Temple v2/scss/_achievements.scss
+++ b/Temple v2/scss/_achievements.scss
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
     padding: 0px 50px;
+    padding-top: 50px !important;
     font-family: 'Poppins', sans-serif;
 
 
@@ -51,13 +52,6 @@
         border-radius: 10px;
 
 
-        p{
-            color: rgba(255, 255, 255, 1);
-            margin-bottom: 55px;
-            text-align: center;
-            
-
-        }
         h2{
           color: rgba(255, 255, 255, 1);
           font-size: 25px !important;
@@ -74,7 +68,8 @@
 
 @media(max-width:800px){
   .achievements{
-    height: 2000px !important;
+    padding-top: 100px !important;
+    height: 1800px !important;
   }
 }
 
@@ -100,6 +95,7 @@
   .achievements {
     padding: 0px 20px;
     height: 1700px !important;
+    padding-top: 200px !important;
 
     .box1{
         width: 410px !important;
@@ -107,13 +103,4 @@
     }
   }
 }
-
-@media(max-width:500px){
-
-    .box1{
-        width: 410px !important;
-        height: 386px;
-    }
-  }
-
 
