--- a/Temple v2/scss/_about.scss
+++ b/Temple v2/scss/_about.scss
@@ -55,6 +55,7 @@
 @media (max-width: 950px){
     .about{
         padding: 0px 50px;
+        padding-top: 50px;
         h1{
             font-size: 40px;
         }
@@ -69,7 +70,7 @@
 
 @media (max-width: 710px){
     .about{
-        height: 850px;
+        height: 700px;
 
         padding: 0px 50px;
         h1{
@@ -90,8 +91,8 @@
 
 @media (max-width: 500px){
     .about{
-        height: 900px;
-        padding: 0px 40px;
+        height: 700px;
+        padding: 0px 20px;
 
         h1{
             font-size: 30px;
@@ -106,5 +107,12 @@
             }
 
     }
+  }
+}
+
+@media (max-width: 370px){
+    .about{
+        height: 800px;
+
   }
 }
