--- a/Temple v2/scss/_contact.scss
+++ b/Temple v2/scss/_contact.scss
@@ -53,6 +53,7 @@
                 font-size: 20px;
                 line-height: 21px;
                 color: #FFFFFF;    
+                margin-bottom: 20px;
                 
                 a{
                     color: rgba(66, 219, 191, 1);
@@ -137,17 +138,25 @@
     }
 }
 
-@media (max-width: 630px){
+@media (max-width: 637px){
+    .contact-section{
+        height: 1000px;
+    }
     .contact-section{ 
-        padding-left: 25px;
-        padding-right: 25px;
-        text-align: center;
+        padding: 0px 50px !important;
 
         .contact-container{
             flex-direction: column-reverse;
             height: auto;
-            padding: 0px 30px;
+            padding: 30px 30px;
             width: auto;
+
+            .image{
+            .mobile-img{
+                width: 300px;
+                height: 300px;
+            }
+            }
 
             .info{
                 p{
@@ -162,27 +171,33 @@
 
 @media (max-width: 455px){
     .contact-section{ 
-        transform: scale(.9);
+        height: 900px;
+        padding: 0px 50px;
+        transform: scale(.95);
         .contact-container{
             
             height: auto;
             width: auto;
-            margin-bottom: -50px;
+
+            .image{
+                .mobile-img{
+                    width: 200px;
+                    height: 200px;
+                }
+            }
 
             .info{
                
+                h1{
+                    font-size: 25px;
+                }
                 p{
                     width: auto;
+                    font-size: 14px;
                 }
             }
         }
     }
 }
 
-@media (max-width: 410px){
-    .contact-section{ 
-        transform: scale(.7);
-        padding-top: 0px;
-        padding-bottom: 0px;
-    }
-}
+
