--- a/Temple v2/scss/_services.scss
+++ b/Temple v2/scss/_services.scss
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     padding: 0px 100px;
-    padding-top: 50px !important;
+    padding-top: 50px ;
     font-family: 'Poppins', sans-serif;
 
 
@@ -50,15 +50,7 @@
         color: #fff;
         cursor: pointer;
         border-radius: 10px;
-
-
-        p{
-            color: rgba(255, 255, 255, 1);
-            margin-bottom: 55px;
-            text-align: center;
-            
-
-        }
+        
         h2{
           color: rgba(255, 255, 255, 1);
           font-size: 25px !important;
@@ -89,16 +81,36 @@
 }
 @media(max-width:1010px){
     .services{
+      padding-top: 70px !important;
     .box{
         margin-bottom: 20px;
+        width: 330px;
+        height: 300px;
+
+        img{
+          width: 150px;
+        }
     }
 }
 }
-
+@media(max-width:950px){
+  .services{
+    height: 850px;
+    padding-top: 70px !important;
+  }
+}
 
 
 @media(max-width:500px){
   .services {
     padding: 0px 20px;
+  
   }
+  .box{
+    margin-bottom: 20px;
+
+    img{
+      width: 120px !important;
+    }
+}
 }
