--- a/Temple v2/scss/_contact.scss
+++ b/Temple v2/scss/_contact.scss
@@ -159,9 +159,12 @@
             }
 
             .info{
+                h1{
+                    margin-bottom: 15px;
+                }
                 p{
                     width: auto;
-                    margin-bottom: 50px;
+                    margin-bottom: 10px;
                     text-align: center;
                 }
             }
