--- a/Temple v2/scss/_navbar.scss
+++ b/Temple v2/scss/_navbar.scss
@@ -40,7 +40,7 @@ nav{
  }
 
  .navlinks {
-   background-color: rgba(41, 3, 231, 0.828);
+   background: rgb(17, 1, 34);
     list-style-type: none;
     width: 50vw;
     position: absolute;
@@ -67,9 +67,7 @@ nav{
  .navitems {
     padding: 1rem 1.5rem;
     font-size: 16px;
-    line-height: 121.5%;
-   
-        
+    line-height: 121.5%; 
     
  }
 
@@ -105,6 +103,9 @@ nav{
  }
  .logo a{
      text-decoration: none;
+ }
+ .logo-nav{
+   margin-top: 5px;
  }
  
  #burger {
@@ -145,8 +146,7 @@ nav{
    background: rgba(27, 0, 73, 1);
    backdrop-filter: blur(100px);    
    min-height: 60px;
-   transition: all .50s ease-in-out;
-   
+   transition: all .30s ease-in-out;
 }
 
  .center{
@@ -206,13 +206,28 @@ nav{
       margin: 0px !important;
       display: flex;
       flex-direction: column;
+      text-align: center;
       width: 100%;
 
      }
      .social-media{
-      margin-left: 20px;
+      text-align: center;
+      display: flex;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
       width: 100%;
+      a{
+         font-size: 30px;
+         color: aqua;
+      }
+      .bxl-discord-alt{
+         margin-right: 15px;
+      }
+      
+
      }
+   
  }
 
 
