--- a/Temple v2/scss/_home.scss
+++ b/Temple v2/scss/_home.scss
@@ -62,10 +62,10 @@
                 box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.4);
             }
             .button1:hover {
-                background: rgba(162, 162, 162, 0.172);
+                background: #42DABF;
                 color: rgba(229, 229, 229, 1);
                 box-shadow: 3px 3px 15px #ffffff0b;
-
+                transition: 0.60s all;
             }
         }
     
