--- a/Temple v2/scss/_home.scss
+++ b/Temple v2/scss/_home.scss
@@ -56,23 +56,32 @@
                 
             }
             .button1{
-                color: rgb(255, 255, 255);
-                border: 2px solid #42DABF;
+                color: white;
+                border: 1px solid #42DABF;
                 background-color: transparent;
-                box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.4);
+                transition: 1s all ease;
+                position: relative;
             }
-            .button1:hover {
-                background: #42DABF;
-                color: rgba(229, 229, 229, 1);
-                box-shadow: 3px 3px 15px #ffffff0b;
-                transition: 0.60s all;
+            .button1::before{
+                background-color: #42DABF;
+                content: "";
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                z-index: -1;
+                transition: all 0.6s ease;
+                width: 0;
+                height: 100%;
+            }
+            
+            .button1:hover::before{
+                width: 100%;
             }
         }
-    
     }
-
-
 }
+
 
   
 
