--- a/Temple v2/scss/_footer.scss
+++ b/Temple v2/scss/_footer.scss
@@ -1,7 +1,7 @@
 footer{
     color: rgba(255, 255, 255, 1);
     background: rgba(12, 0, 31, 1);
-    padding: 30px;
+    padding: 31px;
     border-top: 1px solid rgba(66, 219, 191, 1);
     font-family: 'Poppins', sans-serif;
 }
@@ -19,9 +19,7 @@ footer{
         justify-content: center;
         flex-direction: column;
         color: #fff;
-            img{
-                width: 80px !important;
-            }
+
     }
     .middle-footer{
         display: flex;
@@ -40,6 +38,10 @@ footer{
         align-items: center !important;
         justify-content: center !important;
         text-align: center !important;
+    }
+
+    .right-footer{
+        margin-top: 10px;
     }
 
     .up{
@@ -89,6 +91,12 @@ footer{
         width: 500px;
         font-size: 14px;
         text-align: center;
+    }
+    .left-footer{
+        img{
+            width: 50px;
+            height: 50px;
+        }
     }
   }
 }
