--- a/Temple v2/scss/_navbar.scss
+++ b/Temple v2/scss/_navbar.scss
@@ -100,6 +100,7 @@ nav{
  
  .logo-nav{
    margin-top: 5px;
+
  }
  
  #burger {
@@ -125,7 +126,7 @@ nav{
  .social-media{
    display: flex;
    flex-direction:row !important;
-   margin-top: 3px;
+   margin-top: 5px;
       a{
          font-size: 40px;
          color: aqua;
@@ -191,7 +192,10 @@ nav{
       display: none;
    }
     .nav-logo1{
-      margin-top: 10px;
+      margin-top: 5px;
+      width: 40px;
+      height: 40px;
+         
     }
     .navbar{
        justify-content: space-between !important;
